fixing bug w footer

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
       >
         Project
       </h1>
-      <p>
-        What books have I been reading lately and what do I want to read?
-      </p>
+      <p>What books have I been reading lately and what do I want to read?</p>
     </header>
     <div class="btnContainer">
       <button class="showFormBtn">Add New Book</button>
@@ -50,12 +48,13 @@
     <section class="cards">
       <div class="bookCard"></div>
     </section>
-  </body>
-  <footer>
-    <div class="footerContainer">
+    <footer>
+      <div class="footerContainer">
         <a href="https://github.com/kauai-ian" target="_blank">
-          <img src="./images/github.svg" alt="github" width="25px">
-            <p>Made on Planet Earth by Ian Tierney</p>
+          <img src="./images/github.svg" alt="github" width="25px" />
+          <p>Made on Planet Earth by Ian Tierney</p>
         </a>
-    </div>
+      </div>
+    </footer>
+  </body>
 </html>
