--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </h1>
       <p>What books have I been reading lately and what do I want to read?</p>
     </header>
+    <section>
     <div class="btnContainer">
       <button class="showFormBtn">Add New Book</button>
     </div>
@@ -45,8 +46,9 @@
         <input type="submit" value="submit" class="submitBtn" />
       </form>
     </div>
-    <section class="cards">
+    <div class="cards">
       <div class="bookCard"></div>
+    </div>
     </section>
     <footer>
       <div class="footerContainer">
