--- a/index.html
+++ b/index.html
@@ -28,26 +28,34 @@
       <p>What books have I been reading lately and what do I want to read?</p>
     </header>
     <section>
-    <div class="btnContainer">
-      <button class="showFormBtn">Add New Book</button>
-    </div>
-    <div class="modal">
-      <form class="formData">
-        <span class="close">&times;</span>
-        <h3>Add New Book</h3>
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required/>
-        <label for="author">Author:</label>
-        <input type="text" id="author" name="author" required/>
-        <label for="pages">Pages:</label>
-        <input type="number" id="pages" name="pages" required/>
-        <label for="read">Have read status:</label>
-        <input type="checkbox" id="read" name="read" value="yes"/>
-        <input type="submit" value="submit" class="submitBtn" />
-      </form>
-    </div>
-    <div class="cardContainer">
-    </div>
+      <div class="btnContainer">
+        <button class="showFormBtn">Add New Book</button>
+      </div>
+      <div class="modal">
+        <form class="formData">
+          <div class="modalHeader">
+            <div class="close">&times;</div>
+            <h3>Add New Book</h3>
+            
+          </div>
+          <label for="title"></label>
+          <input
+            type="text"
+            id="title"
+            name="title"
+            placeholder="Title"
+            required
+          />
+          <label for="author"></label>
+          <input type="text" id="author" name="author" placeholder="Author" />
+          <label for="pages"></label>
+          <input type="number" id="pages" name="pages" placeholder="Pages" />
+          <label for="read">Have read status:</label>
+          <input type="checkbox" id="read" name="read" value="yes" />
+          <input type="submit" value="Submit" class="submitBtn" />
+        </form>
+      </div>
+      <div class="cardContainer"></div>
     </section>
     <footer>
       <div class="footerContainer">
